Backend updates
- Added approve and reject endpoint
- Improve create vehicle and update assignment endpoints
- Added vehicle_status req body to assignment/list
- Update Vehicle Exports
